Fix database & sticky bug
Compiliation errors and extraneous english qualifiers

The .app, body and html were misaligned again for some reason. IDGAF so
I set them all to be position:absolute; and top:0;

--- a/TakeCare/www/css/index.css
+++ b/TakeCare/www/css/index.css
@@ -32,6 +32,8 @@ html {
 html {
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
 }
 
 body {
@@ -51,13 +53,16 @@ body {
     width:100%;
     margin:0px;
     padding:0px;
+    position: absolute;
+    top: 0;
 }
 
 /* Portrait layout (default) */
 .app {
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
+    top: 0;
     /*background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
     /*position:absolute;             /* position in the center of the screen */
     /*position:relative;
